# KYS_Pis

KYS_pis/: ButtonBar.qml  CMakeLists.txt  CMakeLists.txt.user.6415a8b  CMakeLists.txt.user.ad0c876  MenuButton.qml  PopupWindow.qml  StationSelect.qml  VideoDelegate.qml  driverAnonsmentSelection.qml  driverDirectionSelection.qml  driverMidArea.qml  endPointsClass.h  main.cpp  main.qml  qml.qrc  secondary.qml  workerobject.cpp  workerobject.h
build-KYS_Pis-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/appKYS_Pis_autogen/EWIEGA46WW/: qrc_qml.cpp
build-KYS_Pis-Desktop_Qt_5_15_2_MinGW_32_bit-Release/appKYS_Pis_autogen/: mocs_compilation.cpp
build-KYS_Pis-Desktop_Qt_5_15_2_MinGW_32_bit-Release/appKYS_Pis_autogen/EWIEGA46WW/: qrc_qml.cpp
build-KYS_pis-Desktop_Qt_5_15_2_MinGW_32_bit-Debug/appKYS_Pis_autogen/: mocs_compilation.cpp
build-KYS_pis-Desktop_Qt_5_15_2_MinGW_32_bit-Release/appKYS_Pis_autogen/EWIEGA46WW/: qrc_qml.cpp
build-KYS_pis-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/appKYS_Pis_autogen/EWIEGA46WW/: qrc_qml.cpp
build-KYS_pis-Desktop_Qt_6_5_0_MinGW_64_bit-Release/appKYS_Pis_autogen/EWIEGA46WW/: qrc_qml.cpp
